@@ -37,6 +37,7 @@ Release 0.20.0 - Unreleased
    HBASE-1166  saveVersion.sh doesn't work with git (Nitay Joffe via Stack)
    HBASE-1167  JSP doesn't work in a git checkout (Nitay Joffe via Andrew
                Purtell)
+   HBASE-1178  Add shutdown command to shell
 
 Release 0.19.0 - 01/21/2009
   INCOMPATIBLE CHANGES
